--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -1,3 +1,5 @@
+
+
 name: Dev-Multi-Module Build and Deploy
 
 on:
@@ -39,8 +41,15 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Build with Gradle
-        run: ./gradlew :module-batch:build
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Check Docker Compose Version and Install if Needed
+        run: |
+          if ! docker-compose --version; then
+            curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            chmod +x /usr/local/bin/docker-compose
+          
 
       - name: Log in to Amazon ECR
         env:
@@ -54,8 +63,11 @@ jobs:
         env:
           BATCH_REPOSITORY_URI: ${{ secrets.BATCH_REPOSITORY_URI }}
         run: |
-          docker build -t $BATCH_REPOSITORY_URI:latest -f module-batch/Dockerfile .
-          docker push $BATCH_REPOSITORY_URI:latest
+          set -e
+          docker-compose -f docker-compose.batch.yml build
+          docker-compose -f docker-compose.batch.yml push
+
+        
 
   build-and-deploy-common:
     needs: changes
@@ -65,8 +77,15 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Build with Gradle
-        run: ./gradlew :module-common:build
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Check Docker Compose Version and Install if Needed
+        run: |
+          if ! docker-compose --version; then
+            curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            chmod +x /usr/local/bin/docker-compose
+          fi
 
       - name: Log in to Amazon ECR
         env:
@@ -80,5 +99,7 @@ jobs:
         env:
           COMMON_REPOSITORY_URI: ${{ secrets.COMMON_REPOSITORY_URI }}
         run: |
-          docker build -t $COMMON_REPOSITORY_URI:latest -f module-common/Dockerfile .
-          docker push $COMMON_REPOSITORY_URI:latest
+          set -e
+          docker-compose -f docker-compose.common.yml build
+          docker-compose -f docker-compose.common.yml push
+
