--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -71,10 +71,9 @@ jobs:
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
-          EC2_KEY: ${{ secrets.EC2_KEY }}
           BATCH_REPOSITORY_URI: ${{ secrets.BATCH_REPOSITORY_URI }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i "$EC2_KEY" "$EC2_USER@$EC2_HOST" << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i "private-key.pem" "$EC2_USER@$EC2_HOST" << 'EOF'
             docker pull $BATCH_REPOSITORY_URI:latest
             docker stop batch-container || true
             docker rm batch-container || true
@@ -121,10 +120,9 @@ jobs:
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
-          EC2_KEY: ${{ secrets.EC2_SSH_KEY }}
           COMMON_REPOSITORY_URI: ${{ secrets.COMMON_REPOSITORY_URI }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i "$EC2_KEY" "$EC2_USER@$EC2_HOST" << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i "private-key.pem" "$EC2_USER@$EC2_HOST" << 'EOF'
             docker pull $COMMON_REPOSITORY_URI:latest
             docker stop common-container || true
             docker rm common-container || true
