--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -73,7 +73,7 @@ jobs:
           EC2_USER: ${{ secrets.EC2_USER }}
           BATCH_REPOSITORY_URI: ${{ secrets.BATCH_REPOSITORY_URI }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i "private-key.pem" "$EC2_USER@$EC2_HOST" << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i "/home/ubuntu/private-key.pem" "$EC2_USER@$EC2_HOST" << 'EOF'
             docker pull $BATCH_REPOSITORY_URI:latest
             docker stop batch-container || true
             docker rm batch-container || true
@@ -122,7 +122,7 @@ jobs:
           EC2_USER: ${{ secrets.EC2_USER }}
           COMMON_REPOSITORY_URI: ${{ secrets.COMMON_REPOSITORY_URI }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i "private-key.pem" "$EC2_USER@$EC2_HOST" << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i "/home/ubuntu/private-key.pem" "$EC2_USER@$EC2_HOST" << 'EOF'
             docker pull $COMMON_REPOSITORY_URI:latest
             docker stop common-container || true
             docker rm common-container || true
