--- a/module-common/build.gradle
+++ b/module-common/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.37.0'
 
     // slack api
     implementation("com.slack.api:slack-api-client:1.44.1")
