--- a/.github/workflows/prod-Multi-Module CI-CD.yml
+++ b/.github/workflows/prod-Multi-Module CI-CD.yml
@@ -38,6 +38,11 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       # Gradle 빌드 추가
       - name: Build with Gradle
