--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -38,6 +38,13 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       # Gradle 빌드 추가
       - name: Build with Gradle
         run: ./gradlew :module-batch:build
@@ -61,7 +68,7 @@ jobs:
           file: ./module-common/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.BATCH_REPOSITORY_URI }}:latest .
+          tags: ${{ secrets.BATCH_REPOSITORY_URI }}
 
       - name: Deploy Batch to EC2
         env:
@@ -113,7 +120,7 @@ jobs:
           file: ./module-common/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.BATCH_REPOSITORY_URI }}:latest .
+          tags: ${{ secrets.BATCH_REPOSITORY_URI }}
 
       - name: Deploy Common to EC2
         env:
