--- a/.github/workflows/prod-Multi-Module CI-CD.yml
+++ b/.github/workflows/prod-Multi-Module CI-CD.yml
@@ -38,6 +38,7 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -67,7 +68,7 @@ jobs:
           file: ./module-batch/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.BATCH_REPOSITORY_URI }}:latest
+          tags: ${{ secrets.BATCH_REPOSITORY_URI }}
 
       - name: Deploy Batch to EC2
         env:
@@ -90,6 +91,12 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       # Gradle 빌드 추가
       - name: Build with Gradle
@@ -121,7 +128,7 @@ jobs:
           file: ./module-batch/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.COMMON_REPOSITORY_URI }}:latest
+          tags: ${{ secrets.COMMON_REPOSITORY_URI }}
 
       - name: Deploy Batch to EC2
         env:
