--- a/module-common/build.gradle
+++ b/module-common/build.gradle
@@ -46,7 +46,10 @@ dependencies {
     // security-test
     testImplementation 'org.springframework.security:spring-security-test'
 
-
+    // elasticsearch
+    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.17.3'
+    implementation 'org.springframework.data:spring-data-elasticsearch:5.0.0'
 }
 
 tasks.named('bootJar') {
