--- a/module-common/src/main/resources/application-local.yml
+++ b/module-common/src/main/resources/application-local.yml
@@ -1,6 +1,7 @@
 spring:
   config:
     import: optional:file:.env[.properties]
+
   datasource:
     url: ${LOCAL_DB_URL}
     username: ${LOCAL_DB_USERNAME}
@@ -22,6 +23,11 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
+
+  elasticsearch:
+    uris: ${ELASTIC_URIS}
+    username: ${ELASTIC_USERNAME}
+    password: ${ELASTIC_PASSWORD}
 
 ---
 spring:
@@ -53,7 +59,3 @@ kakao:
 
 kakaopay:
   secret: ${KAKAOPAY_SECRET}
-
-
- 
-
