--- a/module-common/src/main/resources/application-local.yml
+++ b/module-common/src/main/resources/application-local.yml
@@ -32,7 +32,7 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_PORT}
     consumer:
-      group-id: auction-group
+      group-id: "auction-group"
       auto-offset-reset: earliest
       enable-auto-commit: false
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
