--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -70,13 +70,18 @@ jobs:
           push: true
           tags: ${{ secrets.BATCH_REPOSITORY_URI }}
 
+      - name: Start SSH Agent and Add Key
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+
       - name: Deploy Batch to EC2
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
           BATCH_REPOSITORY_URI: ${{ secrets.BATCH_REPOSITORY_URI }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i "/home/ubuntu/private-key.pem" -t "$EC2_USER@$EC2_HOST"
+          ssh -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST"
             docker pull $BATCH_REPOSITORY_URI:latest
             docker stop batch-container || true
             docker rm batch-container || true
@@ -122,13 +127,18 @@ jobs:
           push: true
           tags: ${{ secrets.BATCH_REPOSITORY_URI }}
 
+      - name: Start SSH Agent and Add Key
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+
       - name: Deploy Common to EC2
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
           COMMON_REPOSITORY_URI: ${{ secrets.COMMON_REPOSITORY_URI }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i "/home/ubuntu/private-key.pem" -t "$EC2_USER@$EC2_HOST"
+          ssh -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST"
             docker pull $COMMON_REPOSITORY_URI:latest
             docker stop common-container || true
             docker rm common-container || true
