--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -57,8 +57,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
+          ECR_BATCH_LOGIN_URI : ${{secrets.ECR_COMMON_LOGIN_URI}}
         run: |
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.BATCH_REPOSITORY_URI }}
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_BATCH_LOGIN_URI
 
       # Docker 이미지를 빌드하고 멀티 플랫폼으로 푸시
       - name: Build and push multi-platform image to ECR
@@ -68,7 +69,7 @@ jobs:
           file: ./module-common/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.BATCH_REPOSITORY_URI }}
+          tags: ${{ secrets.BATCH_REPOSITORY_URI }}:${{IMAGE_TAG}}
 
       - name: Start SSH Agent and Add Key
         uses: webfactory/ssh-agent@v0.5.3
@@ -80,9 +81,10 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }} #EC2 HOST 종류 선택
           EC2_USER: ${{ secrets.EC2_USER }}
           BATCH_REPOSITORY_URI: ${{ secrets.BATCH_REPOSITORY_URI }}
+          IMAGE_TAG : ${{secrets.IMAGE_TAG}}
         run: |
           ssh -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST"
-            docker pull $BATCH_REPOSITORY_URI
+            docker pull $BATCH_REPOSITORY_URI:$IMAGE_TAG
             docker stop batch-container || true
             docker rm batch-container || true
             docker run -d --name batch-container -p 8081:8081
@@ -114,8 +116,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
+          ECR_COMMON_LOGIN_URI : ${{secrets.ECR_COMMON_LOGIN_URI}}
         run: |
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.COMMON_REPOSITORY_URI }}
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_COMMON_LOGIN_URI
 
       # Docker 이미지를 빌드하고 멀티 플랫폼으로 푸시
       - name: Build and push multi-platform image to ECR
@@ -125,7 +128,7 @@ jobs:
           file: ./module-common/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.BATCH_REPOSITORY_URI }}
+          tags: ${{ secrets.COMMON_REPOSITORY_URI }}:${{IMAGE_TAG}}
 
       - name: Start SSH Agent and Add Key
         uses: webfactory/ssh-agent@v0.5.3
@@ -137,9 +140,10 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
           COMMON_REPOSITORY_URI: ${{ secrets.COMMON_REPOSITORY_URI }}
+          IMAGE_TAG : ${{IMAGE_TAG}}
         run: |
           ssh -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST"
-            docker pull $COMMON_REPOSITORY_URI
+            docker pull $COMMON_REPOSITORY_URI:$IMAGE_TAG
             docker stop common-container || true
             docker rm common-container || true
             docker run -d --name common-container -p 8082:8082
