--- a/notification/build.gradle
+++ b/notification/build.gradle
@@ -4,6 +4,7 @@ repositories {
 
 dependencies {
     api project(':common')
+    api project(':user')
 
     //kafka
     implementation 'org.springframework.kafka:spring-kafka'
