--- a/common/build.gradle
+++ b/common/build.gradle
@@ -26,6 +26,10 @@ dependencies {
 
     // slack api
     implementation("com.slack.api:slack-api-client:1.44.1")
+
+    //kafka
+    implementation 'org.springframework.kafka:spring-kafka'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 tasks.named('bootJar') {
