--- a/service/src/main/resources/application-local.yml
+++ b/service/src/main/resources/application-local.yml
@@ -60,10 +60,11 @@ kakao:
     redirect: ${KAKAO_REDIRECT_URL}
   api:
     key: ${KAKAO_REST_API_KEY}
+  authorization:
+    key: ${KAKAO_AUTHORIZATION_KEY}
 
 kakaopay:
   secret: ${KAKAOPAY_SECRET}
-
 
  
 
